Added codes to the links file

--- a/links.html
+++ b/links.html
@@ -5,11 +5,18 @@
     </head>
     <body>
         <h1>Links</h1>
-        <a href="Lesson1.html">Lesson1</a><br>
-        <a href="images.html">Images</a><br>
-        <a href="Kibera.html">Kibera</a><br>
-        <a href="list.html">Lists</a><br>
-        <a href="amina.html">Amina</a><br>
+        <a href="Lesson1.html" target="_blank">Lesson1</a><br>
+        <a href="images.html" target="_blank">Images</a><br>
+        <a href="Kibera.html" target="_self">Kibera</a><br>
+        <a href="list.html" target="_parent">Lists</a><br>
+        <a href="amina.html" target="_top">Amina</a><br>
+        <a href="Kibera.html" target="_self">Recipe</a><br>
+        <h1>Linking an image</h1>
+        <a href="Recipe.html">
+           <img src="Snack.jpg" alt="omlette">
+        </a><br>
+        <a href="mailto!info@sonearmidenoute.com">sonearmidenoute</a><br>
+        <button onclick="document.location='kibera.html'">Kibera</button>
 
 
     </body>
