Updated the links files and added form file

--- a/links.html
+++ b/links.html
@@ -15,8 +15,8 @@
         <a href="Recipe.html">
            <img src="Snack.jpg" alt="omlette">
         </a><br>
-        <a href="mailto!info@sonearmidenoute.com">sonearmidenoute</a><br>
-        <button onclick="document.location='kibera.html'">Kibera</button>
+        <a href="mailto:rhe@codeday.org">Send Mail</a><br>
+        <br><button onclick="document.location='kibera.html'">Kibera</button>
 
 
     </body>
